Address Searchbar Validation with google maps, Home Driver Map and package selection

--- a/DLivr/src/index.html
+++ b/DLivr/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Ionic App</title>
-
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzbVg-JhZ5enrOtt6KwzDFqG9_7C-vSYo&libraries=places">
+  </script>
   <base href="/" />
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
